updated values
